# insta-lapse-maker

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  pyproject.toml
docs/: cli.md  find-similar-plan.md  reels-spec.md  web-architecture.md  web-plan.md
skills/timelapse-maker/: SKILL.md
src/timelapse/: __init__.py  cli.py  discovery.py  encoder.py  errors.py  logging_setup.py  normalize.py  reels_spec.py  similarity.py  similarity_output.py  system.py
src/timelapse_agent/: __init__.py  __main__.py  cli.py  grid_overlay.py  inspector.py  planner.py
src/timelapse_web/: __init__.py  cli_entry.py  config.py  main.py
src/timelapse_web/api/: __init__.py  deps.py  events.py  fs.py  media.py  projects.py  render.py
src/timelapse_web/models/: __init__.py  jobs.py  project.py
src/timelapse_web/services/: __init__.py  _native_picker_worker.py  filtergraph.py  job_queue.py  native_picker.py  project_store.py  renderer.py  thumbnail.py
tests/: conftest.py  test_cli.py  test_cli_find_similar.py  test_discovery.py  test_encoder.py  test_normalize.py  test_similarity.py  test_similarity_output.py  test_system.py
tests/timelapse_agent/: test_agent_cli.py  test_grid_overlay.py  test_inspector.py  test_planner.py
tests/timelapse_web/: test_api_fs.py  test_api_projects.py  test_filtergraph.py  test_project_model.py  test_project_store.py  test_render_integration.py
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.js  App.tsx  styles.css
web/src/api/: client.js  client.ts
web/src/utils/: path.js  (+1 more)
(+40 files in other folders)
